Page 1 background cache issue

--- a/event_app_platform.html
+++ b/event_app_platform.html
@@ -20,7 +20,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-    <!-- Google Analytics -->
+  
+  
+</head>
+<body>
+
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -30,13 +35,6 @@
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
-  
-
-  
-</head>
-<body>
-
-
 
 
   <section class="menu cid-rjRSTwAV1m" once="menu" id="menu1-d">
@@ -74,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header6 cid-rhZCEHfo8X mbr-fullscreen mbr-parallax-background" id="header6-9">
+<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="header6 cid-rhZCEHfo8X mbr-fullscreen mbr-parallax-background" id="header6-9">
 
     
 
@@ -603,7 +601,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m9SvRbMvr0i5d0gJS1aRDyp0DtChBSfgN86SswcBg34Nu0c9aulE+e6SykC3zi8hU2ueWR+dALT8sY3tldVRovMwpVZQ5B5pubv0aWpSN40a0nDc/2niwMOmvWzD4yeA">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s3aJoowRjaAEEZMp7GcPGIUprUNDai9NccZCoiLS1+2X+wTqK1dWiT8gZSW9TCqy4s/HWuqFLlLmEXdjiFUmt7kbNGYsJtKNeSRFkzRhXeeuJ5BYQZftTdnkCRR2ufQQ">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out, we`ll get back to you ASAP!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -645,7 +643,7 @@
             <div class="col-md-2 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="https://sarcontech.com">
-                         <img src="assets/images/sarcon-logo-black-square-406x40613.jpg" alt="Mobirise" title="">
+                         <img src="assets/images/sarcon-logo-black-square-406x40619.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
                 <p class="mbr-fonts-style foot-logo display-7"></p>
@@ -681,7 +679,7 @@
                     Get monthly updates and free resources from the word of events and marketing.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hq57Xl07T6rooTCbs6eKPzDRc5X9f8XlOQtn+OJvBBjOX7ExJV4Y7PdXeL5IwEgSJHQQlUE17PWVHRtyhWanc3tC77oupPtOyyFmieX6wDnWfTqOL1qEEX3qz07qWjPB">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R78k+SeuQnZVO7Xf3bYRu2hMOyN8bKUXBSktyh+CdhV6/oOg6+SETr2LV0oYcfIyIvqhE5MdqJE8k5sWtbAsTA1qriicfmk2fK36FP4GHtiYB5x5YxFnCEMLYbwYdHZ1">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You have been subscribed to our mailing list, welcome to the family!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -756,18 +754,5 @@
   
   
   <input name="animation" type="hidden">
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
   </body>
 </html>
