--- a/EventRegistration.html
+++ b/EventRegistration.html
@@ -20,7 +20,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-    <!-- Google Analytics -->
+  
+  
+</head>
+<body>
+
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -30,13 +35,6 @@
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
-  
- 
-  
-</head>
-<body>
-
-
 
 
   <section class="menu cid-rjRSTwAV1m" once="menu" id="menu1-d">
@@ -74,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="cid-rkBf8PEQCM mbr-fullscreen mbr-parallax-background" id="header2-1a">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="cid-rkBf8PEQCM mbr-fullscreen mbr-parallax-background" id="header2-1a">
 
     
 
@@ -423,7 +421,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GNl03ysmE9St1gxqIyHJp5mU3UabJIgjNfxrYWMyLJvcbegJx2o5AlxU9l3bcbeoTjXb2346ZMqpYFHMLLPHUlSod9Rui9Z2yQ53oDPR8qNpS4uYZgg9wvm50K85Ad2h">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3nfYAdE+2rigoWXyBd055xA3XqbKuJfFwya4WGQP+Xt+bbH0X+oJkd3nOrVOpMvEBXwbO3iuJpU+9i/wreQhYlrTwyz/IMBktNt6TyIiyHsbznMvypVhOFm/6RO8spV/">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out, we`ll get back to you ASAP!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -501,7 +499,7 @@
                     Get monthly updates and free resources from the word of events and marketing.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZzLLoquUilLcpCiKXLTBltmG9TNoC16Q7xfqZ9sKvkwHKmdiGa4/MKyG+6HTJ96Lfih2vdutFw94S5eiTAu4T5qDb0hK5vc0FMOJ/m9Ncj/YYocwG2iNxGRm3cXtZkdp">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xQxyfhkpQbyvC0JPHWqsr4zExtjjdmxmygixASXdcQ+KPUar5ESqxrl2xgDV01aPElZ1t9L0DJ33ofZ0BpGW5ZCt8hRXbl/obw4xYTrliTVG+ebtt0qSKn3dCI2kqB5B">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You have been subscribed to our mailing list, welcome to the family!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -578,18 +576,5 @@
   
   
   <input name="animation" type="hidden">
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
   </body>
 </html>
