--- a/careers.html
+++ b/careers.html
@@ -20,7 +20,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-      <!-- Google Analytics -->
+  
+  
+</head>
+<body>
+
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -30,14 +35,6 @@
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
-  
-
-  
-  
-</head>
-<body>
-
-
 
 
   <section class="menu cid-rkuv6QBpdv" once="menu" id="menu1-1m">
@@ -75,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rkuvhYVNBa mbr-parallax-background" id="header2-1n">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="cid-rkuvhYVNBa mbr-parallax-background" id="header2-1n">
 
     
 
@@ -331,7 +328,7 @@
                     Get monthly updates and free resources from the word of events and marketing.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QCKBWPuSywNSXSo8D89x69H0zsPibj+kH881tUGuF4apqFrWqnPyWMe0AoC2rw6GuuwYpxAh0TnzLPDNGCn6qstu5Eq7Bg5HmKO5r+aF8CNa6hnE+2bYqx5VUTHJEq9V">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="H0U5ezITND0TCLMgXVV8QEilKE49PR1IRMYLCgzuMpM6YvjfdwPrIwswTbtUGoRtSxGZ5y3PRdqKRQLv9MxEhlX38/6ys20hzOAQ2Z+W77Y+Rfm0SVWrSAShitPzMqqw">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You have been subscribed to our mailing list, welcome to the family!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -404,18 +401,5 @@
   
   
   <input name="animation" type="hidden">
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
   </body>
 </html>
