--- a/eventwebsites.html
+++ b/eventwebsites.html
@@ -20,7 +20,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-    <!-- Google Analytics -->
+  
+  
+</head>
+<body>
+
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -30,13 +35,6 @@
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
-  
-
-  
-</head>
-<body>
-
-
 
 
   <section class="menu cid-rjRSTwAV1m" once="menu" id="menu1-d">
@@ -74,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-rkBugTkJNv mbr-fullscreen mbr-parallax-background" id="header2-1b">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-rkBugTkJNv mbr-fullscreen mbr-parallax-background" id="header2-1b">
 
     
 
@@ -360,7 +358,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="exH9qi5Ww+94gfP96zOfdWijpFc1pGwtzInIUGq13uQlELO2i/Ekk7QfE50JM8L1JYsnKCVpxJuu2JJtWlTW3bpgrTWvaoA3tNXdNRlq06vJc/A1Bw/ZKupoMCH8FmLI">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IBoevN4eyzPc//F3OU/HrD/XHzSjhi+05aaVjEeu6A328mUiIMx4JzQMCpnIq4yg+zLSh+D4KPHzxZ0H+x5GGJz+wrB/m54iTV8EttT5NRsZYFWzURVXgEeL5+cKloC4">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out, we`ll get back to you ASAP!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -402,7 +400,7 @@
             <div class="col-md-2 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="https://sarcontech.com">
-                         <img src="assets/images/sarcon-logo-black-square-406x40612.jpg" alt="Mobirise" title="">
+                         <img src="assets/images/sarcon-logo-black-square-406x40618.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
                 <p class="mbr-fonts-style foot-logo display-7"></p>
@@ -438,7 +436,7 @@
                     Get monthly updates and free resources from the word of events and marketing.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HrycrkmsIJ0FxPeFo2v5d0I5wsFwhnCsS8nhUZnMake2xjN8EMCqz41VIH911wMmAThFRNDJcEU3kM35LA9ZAGWoCBCrY/MC5YNYgIqxrAkDosfBHk1fPoMKcdFtjZM3">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Sn+qj11F0ZNPpCbQ/W8jf9sAV+JId7kXxXqQbQE52H6CUxFKREzJjb8lbEvRehahsxRqvoPfr+mnliziTlnnXg4onMJtH3fnfRIpUN9n3SmoftZncrfCeqLDuWDOw15W">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You have been subscribed to our mailing list, welcome to the family!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -515,18 +513,5 @@
   
   
   <input name="animation" type="hidden">
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
   </body>
 </html>
