--- a/pricing.html
+++ b/pricing.html
@@ -23,7 +23,12 @@ Event management software pricing">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-    <!-- Google Analytics -->
+  
+  
+</head>
+<body>
+
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -33,12 +38,6 @@ Event management software pricing">
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
-  
-
-  
-</head>
-<body>
-
 
 
   <section class="menu cid-rkuv6QBpdv" once="menu" id="menu1-1m">
@@ -76,7 +75,7 @@ Event management software pricing">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="cid-rkuvhYVNBa mbr-fullscreen mbr-parallax-background" id="header2-1n">
+<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="cid-rkuvhYVNBa mbr-fullscreen mbr-parallax-background" id="header2-1n">
 
     
 
@@ -138,7 +137,7 @@ Event management software pricing">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dwnluUVNNIxv4/4YMKPRLr3AgxsluLmghLehW5Hw6IOcFui3GeY96+ugtiwGbPRtM/h+0WRmGHoyf1iSPl+KQY4rYNDCUb/KN25H9u2VnicikMdRpf7JzWmSw/Y5apY3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qVlVB4RCyk8UhakptfHZ9TjQK5A0Y5rjG4otRcJMLBUCgxsuHQrT0zXgNh3o3Ow6FQTTntPz7ERJSYHzBG3yjUQVeGWrTMo2Rad6EAT+Sm4Xueoovk93aQkKmTeIZ/J+">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out, we`ll get back to you ASAP!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -180,7 +179,7 @@ Event management software pricing">
             <div class="col-md-2 col-sm-4">
                 <div class="mb-3 img-logo">
                     <a href="index.html">
-                         <img src="assets/images/sarcon-logo-black-square-406x40612.jpg" alt="Mobirise" title="">
+                         <img src="assets/images/sarcon-logo-black-square-406x40618.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
                 <p class="mbr-fonts-style foot-logo display-7"></p>
@@ -216,7 +215,7 @@ Event management software pricing">
                     Get monthly updates and free resources from the word of events and marketing.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4cwjz61+68fEVaOJw6OUQyZ3qOrTVIeqQO7xnVcc1IhUM8Zs/9hSzC8IZ1XhZ9MALjtRY6msY9PWoLtfI6esxMbVNpKwZ3qjjmkkXWfnubeHakYUVkKkLpuFRlXw+y6u">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Vs3/qELE3ml3hejFi7TuCG3CDqxe5pwxdmvRRA1netuX/JblU1a9p+d2JbFwOIPO285SOd67JdVq+dRQKOHZ9rWpslJiA/hEVR/hlxs66qqP+009SijwPULGWnmq0naX">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You have been subscribed to our mailing list, welcome to the family!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -289,18 +288,5 @@ Event management software pricing">
   
   
   <input name="animation" type="hidden">
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
   </body>
 </html>
