--- a/event_app_platform.html
+++ b/event_app_platform.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/sarcon-favicon-128x128.png" type="image/x-icon">
   <meta name="description" content="Event Registration, Ticketing and Door Management for conferences,exhibitions and meetings of all sizes">
-  <title>Event App Platform</title>
+  <title>Event App &amp; Registration for Events, Conferences &amp; Meetings. Sarcon </title>
+    <meta name="description" content="Mobile event apps for events, conferences &amp; meetings. Create an incredible event experience. Available on all devices. Free 14 day trial."/>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -20,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <meta name="description" content="Mobile event apps for events, conferences &amp; meetings. Create an unforgettable event experience. "/>
   
 </head>
 <body>
