--- a/investorrelations.html
+++ b/investorrelations.html
@@ -20,12 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
-  
-</head>
-<body>
-
-<!-- Google Analytics -->
+  <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -35,6 +30,11 @@
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
+
+  
+</head>
+<body>
+
 
 
   <section class="menu cid-rkuv6QBpdv" once="menu" id="menu1-1m">
@@ -276,5 +276,18 @@
   
   
   <input name="animation" type="hidden">
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
   </body>
 </html>
