--- a/event_app_platform.html
+++ b/event_app_platform.html
@@ -22,11 +22,8 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   <meta name="description" content="Mobile event apps for events, conferences &amp; meetings. Create an unforgettable event experience. "/>
-  
-</head>
-<body>
-
-<!-- Google Analytics -->
+    
+    <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112760507-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -36,6 +33,11 @@
   gtag('config', 'UA-112760507-1');
 </script>
 <!-- /Google Analytics -->
+  
+</head>
+<body>
+
+
 
 
   <section class="menu cid-rjRSTwAV1m" once="menu" id="menu1-d">
@@ -755,5 +757,18 @@
   
   
   <input name="animation" type="hidden">
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5c890aa1101df77a8be26769/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
   </body>
 </html>
