--- a/pricing.html
+++ b/pricing.html
@@ -85,7 +85,7 @@
 <div>of the event size and the feature set enabled. 
 </div><div>Rest assured we will figure out a plan that fits your budget and need.</div></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">Get a free quote</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="pricing.html#form1-1o">Get a free quote</a></div>
             </div>
         </div>
     </div>
